[feature/new-app-state-change-process]Fix z-index. Update visual design

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -678,7 +678,7 @@ a {
 	position : absolute;
 	top      : 54px;
 	bottom: 0;
-	z-index  : 80;
+	z-index  : 10;
 	width    : 45px;
 }
 
@@ -699,7 +699,7 @@ a {
 
 	width: 244px;
 
-	z-index  : 75;
+	z-index  : -1;
 	position : fixed;
 	left     : -300px;
 	top      : 54px;
@@ -6833,9 +6833,9 @@ a.action-link:hover {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 70;
-	background-color: rgba(0, 0, 0, 0.8);
-	box-shadow: inset 0 2px 0 #f0f0f0;
+	z-index: 5;
+	background-color: rgba(243, 243, 243, 0.7);
+	/*box-shadow: inset 0 2px 0 #f0f0f0;*/
 }
 
 .overlay-content-wrap {
